# git-prompts-mcp-server

./: .gitignore  AGENTS.md  README.md  gemini-extension.json  pyproject.toml  pytest.ini
.github/workflows/: run_tests.yml
skills/codex-add-git-tools/: SKILL.md
skills/codex-add-git-tools/agents/: openai.yaml
src/git_prompt_mcp_server/: __init__.py
src/git_prompts_mcp_server/: __init__.py  __main__.py  cli.py  server.py  test_server.py  version.py
tests/: test_exclusion_logic.py  test_server.py
