[project]
name = "git-prompts-mcp-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
    "fastmcp>=2.0,<3.0",
    "pydantic>=2.11.1",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
git-prompts-mcp-server = "git_prompts_mcp_server:entry_point"

[[project.authors]]
name = "Ceshine Lee"
email = "shuanck@gmail.com"
