[project]
name = "git-prompts-mcp-server"
version = "0.3.3"
description = "A Model Context Protocol (MCP) server that offers several commands to generate prompts based on the Git repository's content."
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "fastmcp>=2.12.2,<3.0",
    "pydantic>=2.11.1",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "pytest-env>=1.1.5",
]

[build-system]  # A build system is required to support [project.scripts]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
git-prompts-mcp-server = "git_prompts_mcp_server:entry_point"

[[project.authors]]
name = "Ceshine Lee"
email = "shuanck@gmail.com"

[tool.pyright]
reportCallInDefaultInitializer = false
